added mobile styles to Italy attack

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
   color: white;
 }
 
+@media(max-width: 800px) {
+  .App-header {
+    background-repeat: repeat
+  }
+}
+
 .App-link {
   color: #61dafb;
 }
